--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <div id="wave">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-        <script src="/waves.js"></script>
     </div>
 
     <div id="profile">
         <div id="typed_container">
             <h1 id="typed"></h1>
-            <script src="/typed.js"></script>
         </div>
         <h2>CS Student | Java Enjoyer | Linux Hacker</h2>
         <div id="icons">
@@ -38,6 +36,8 @@
             </a>
         </div>
     </div>
-
 </body>
+<footer>
+    <script src="/app.js"></script>
+</footer>
 </html>
