fixed icon links

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
         <h2>CS Student | Java Enjoyer | Linux Hacker</h2>
         <div id="icons">
-            <a href="https://www.github.com/haydenzeller">
+            <a href="https://www.github.com/haydenzeller" target="_blank">
                 <img alt="Github" src="/assets/github.png" width="50" height="50">
             </a>
-            <a href="https://www.linkedin.com/haydenzeller">
+            <a href="https://ca.linkedin.com/in/haydenzeller?trk=people-guest_people_search-card" target="_blank">
                 <img alt="LinkedIn" src="/assets/LinkedIn.png" width="50" height="50">
             </a>
         </div>
